Add truncated download using head -n. Closes #2.
