# swagger.yaml
@@ -33,6 +33,22 @@ paths:
           description: 'failed, e.g file can not be uploaded'
           schema:
             type: 'string'
+  /download/truncated/{filePath}:
+    get:
+      description: "Download a truncated version of the file"
+      produces: 
+      - "text/gsvar"
+      parameters:
+      - name: "filePath"
+        in: "path"
+        description: "Path to the file"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: 'successfull'
+          schema:
+            type: file
   /download/{filePath}:
     get:
       produces: 
@@ -86,3 +102,4 @@ definitions:
 externalDocs:
   description: "Find out more about ngs-bits"
   url: "http://github.com/imgag/ngs-bits"
+
